apps/prowlarr/ingress-prowlarr-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: prowlarr
      port:
        number: 9696
  tls:
    - hosts:
        - prowlarr
